# cuttle

./: Cargo.toml  README.md
crates/cuttle_core/: Cargo.toml
crates/cuttle_core/src/: bounding.rs  calculations.rs  debug.rs  extensions.rs  indices.rs  lib.rs
crates/cuttle_core/src/components/: arena.rs  buffer.rs  initialization.rs  mod.rs
crates/cuttle_core/src/configs/: builder.rs  global.rs  mod.rs
crates/cuttle_core/src/pipeline/: draw.rs  extract.rs  mod.rs  queue.rs  specialization.rs
crates/cuttle_core/src/shader/: code_gen.rs  fragment.wgsl  gen.rs  generated_source.rs  mod.rs  vertex.wgsl  wgsl_struct.rs
crates/cuttle_macros/: Cargo.toml
crates/cuttle_macros/src/: lib.rs
crates/cuttle_sdf/: Cargo.toml
crates/cuttle_sdf/src/: lib.rs  sdf.wgsl
examples/: all_operations.rs  custom_component.rs  fire.rs  flame.rs  minimal.rs  minimal_operation.rs  multiple.rs  operations.rs  remove.rs  repetition.rs  shapes.rs  showcase.rs  stress_test.rs  test.rs  ui.rs
src/: _pipeline.rs  aabb.rs  bounding.rs  builder.rs  calculations.rs  components.rs  debug.rs  extensions.rs  flag.rs  groups.rs  implementations.rs  indices.rs  initialization.rs  lib.rs  operations.rs  operations_old.rs  pipeline.rs  scheduling.rs  utils.rs
src/builtins/: builtins.wgsl  groups.rs  mod.rs  operations.rs  sdf.rs  ui_sdf.rs
src/components/: arena.rs  buffer.rs  colors.rs  extract.rs  initialization.rs  mod.rs
src/groups/: builder.rs  global.rs  mod.rs
src/implementations/: calculations.rs  components.rs  mod.rs  operations.rs
src/operations/: mod.rs
src/pipeline/: draw.rs  extract.rs  mod.rs  queue.rs  specialization.rs
src/render/: draw.rs  extract.rs  mod.rs  pipeline.rs  process.rs  queue.rs  shader_loading.rs
src/render/shader/: buffers.rs  building.rs  lines.rs  loading.rs  mod.rs  variants.rs
src/shader/: bindgroups.rs  building.rs  calculations.rs  common.wgsl  fragment.wgsl  gen.rs  lines.rs  mod.rs  snippets.rs  vertex.wgsl  wgsl_struct.rs
