[package]
name = "cuttle"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["crates/cuttle_core", "crates/cuttle_macros", "crates/cuttle_sdf"]

[features]
default = ["sdf"]
sdf = ["cuttle_sdf"]

[dependencies]
cuttle_core = { path = "crates/cuttle_core" }
cuttle_macros = { path = "crates/cuttle_macros" }
cuttle_sdf = { path = "crates/cuttle_sdf", optional = true }

bevy_app = "0.16.0"

[dev-dependencies]
bevy = { version = "0.16.0", features = ["configurable_error_handler"] }
rand = "0.9"
bevy-inspector-egui = "0.31"
bevy_mod_debugdump = "0.13.0"
