[package]
name = "cuttle_core"
version = "0.1.0"
edition = "2024"

[features]
default = ["debug"]
debug = ["bevy_gizmos", "bevy_color"]

[dependencies]
bevy_log = "0.16.0-rc.5"
bevy_app = "0.16.0-rc.5"
bevy_utils = "0.16.0-rc.5"
bevy_ecs = "0.16.0-rc.5"
bevy_reflect = "0.16.0-rc.5"
bevy_asset = "0.16.0-rc.5"
bevy_render = "0.16.0-rc.5"
bevy_derive = "0.16.0-rc.5"
bevy_math = "0.16.0-rc.5"
bevy_transform = "0.16.0-rc.5"
bevy_image = "0.16.0-rc.5"
bevy_core_pipeline = "0.16.0-rc.5"

variadics_please = "1.1"
bytemuck = "1"
convert_case = "0.7"
derive_more = { version = "2.0.1", features = ["error", "display", "from"] }

bevy_gizmos = { optional = true, version = "0.16.0-rc.5" }
bevy_color = { optional = true, version = "0.16.0-rc.5" }
