[package]
name = "cuttle_core"
version = "0.1.0"
edition = "2024"

[features]
default = ["debug"]
debug = ["bevy_gizmos", "bevy_color"]

[dependencies]
bevy_log = "0.17.0-rc.1"
bevy_camera = "0.17.0-rc.1"
bevy_shader = "0.17.0-rc.1"
bevy_app = "0.17.0-rc.1"
bevy_utils = "0.17.0-rc.1"
bevy_ecs = "0.17.0-rc.1"
bevy_reflect = "0.17.0-rc.1"
bevy_asset = "0.17.0-rc.1"
bevy_render = "0.17.0-rc.1"
bevy_derive = "0.17.0-rc.1"
bevy_math = "0.17.0-rc.1"
bevy_transform = "0.17.0-rc.1"
bevy_image = "0.17.0-rc.1"
bevy_core_pipeline = "0.17.0-rc.1"
bevy_platform = "0.17.0-rc.1"
bevy_mesh = "0.17.0-rc.1"

variadics_please = "1.1"
bytemuck = "1"
convert_case = "0.7"
derive_more = { version = "2.0.1", features = ["error", "display", "from"] }
serde = { version = "1.0", features = ["derive"] }
futures-io = "0.3"

bevy_gizmos = { optional = true, version = "0.17.0-rc.1" }
bevy_color = { optional = true, version = "0.17.0-rc.1" }
